kcms/fonts: Fix font hinting preview

In `combineImages`, the width and the height were calculated
incorrectly. This makes the preview image correctly obey the device
pixel ratio of the primary screen, so the preview image can be clear
and sharp.

BUG: 413673
FIXED-IN: 5.24.6

(cherry picked from commit b96d56ae1727ab6de8b40aa787faef90cdd89fb6)